# projeto-av2-data_science

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
mlartifacts/1/models/m-15e2c824276b454f92d6f7928f5bd0ea/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/1/models/m-9df9b9856d804aa1a8705f06ef5f5441/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-b91fb2fed3bd4928ac3d825e65ae3319/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-cac900f3d7a04d6e89e76971a16544c0/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d306bceb37c9403a950ebbc0f464608b/artifacts/: MLmodel
mlartifacts/2/models/m-a090a1dffee7486587bd685021c35c07/artifacts/: MLmodel  model.pkl
mlartifacts/2/models/m-ad5b0b0387ea4b13951bdd892cc3629f/artifacts/: MLmodel
mlartifacts/2/models/m-f3fef135d1654b3e80c0cd0ff736ff56/artifacts/: MLmodel  conda.yaml  model.pkl
models/: model_final.joblib
notebooks/: 01_eda.ipynb
reports/: artigo_rascunho.md
src/: api.py  data_ingestion.py  evaluate.py  pipeline.py  train.py
