[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brasileirao-predicao"
version = "0.1.0"
description = "Predição de resultado e cartão vermelho no Campeonato Brasileiro de Futebol"
requires-python = ">=3.11"
dependencies = [
    # Ingestão via Kaggle
    "kagglehub[pandas-datasets]>=0.3",
    # Dados
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    # Experimentos e monitoramento
    "mlflow>=2.12",
    "evidently>=0.4",
    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # Utilitários
    "python-dotenv>=1.0",
    "joblib>=1.3",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "notebook>=7.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
